# stdweb-logger

./: Cargo.toml  README.md
examples/: detail.rs  filter.rs  format.rs  simple.rs
src/: lib.rs
